tests/language_modules/09_statements/valid/call_statement.vf
module CallStatement

procedure accept(flag: Boolean)
is
    check flag
end accept

procedure main()
is
    call accept(true)
end main

end CallStatement