tests/language_modules/09_statements/invalid_semantics/if_condition_requires_boolean.vf
module IfConditionRequiresBoolean

procedure main()
is
    if 1 then
        check true
    end if
end main

end IfConditionRequiresBoolean